# captcha_competition

./: .env.template  .gitignore  .pylintrc  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
captcha_competition/: __init__.py  captcha_dataset.py  finetune.py  generate_captcha.py  load_config.py  load_data.py  model.py  paths.py  preprocessing.py  submission.py  submit_from_config.py  train.py
captcha_competition/data/: __init__.py  captcha_dataset.py  data_loader_handler.py  dataset.py  generate_captcha.py  iterable_dataset.py  preprocessing.py  visualization.py
captcha_competition/pytorch_model/: __init__.py  efficientnet.py  resnet.py  resnet_transformer.py
captcha_competition/training/: __init__.py  data_loader_handler.py  factories.py  loss.py  metric.py  trainer.py
config/: compe-8-1.yaml  compe-8-2.yaml  efficientnet_default.yaml  resnet-3.yaml  resnet-transformer-1.yaml  resnet-transformer-2-finetune.yaml  resnet-transformer-2.yaml  resnet-transformer-4.yaml  resnet-transformer-5.yaml  resnet-transformer-6-finetune.yaml  resnet-transformer-6.yaml  resnet-transformer-7.yaml  resnet-transformer-8-finetune.yaml  resnet-transformer-8.yaml  resnet-transformer-82-finetune.yaml  resnet_default.yaml
data/: compe-8-1.csv  resnet-transformer-2-finetune.csv  resnet-transformer-6-finetune-pablo.csv  resnet-transformer-6-finetune.csv
models/: efficientnet_30_1dot5_synthetic.pt  resnet_16_2_synthetic.pt
notebooks/: model-summaries.ipynb  testing-alvaro.ipynb  testing-carlota.ipynb  testing-pablo.ipynb  training-pablo.ipynb
(+43 files in other folders)
