[tool.poetry]
name = "captcha-competition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torchvision = "^0.17.1"
torch = "^2.2.1"
wandb = "^0.16.3"
opencv-python = "^4.9.0.80"
keras = "^3.0.5"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
pandas-stubs = "^2.2.0.240218"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
types-pillow = "^10.2.0.20240213"
torchsummary = "^1.5.1"
types-pyyaml = "^6.0.12.20240311"
imageio = "^2.34.0"
tqdm = "^4.66.2"
torchinfo = "^1.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
